# UltimatePhobia

./: .gitignore  .gitmodules  README.md  format.sh  interface.md  signaling.py
Doxygen/: Doxyfile
SockFFIClient/: CMakeLists.txt  dlhandle.hpp  main.cpp  socket.cpp  socket.hpp  test.cpp  utils.hpp
SteamAudioImpl/: .gitignore  CMakeLists.txt  SteamAudioImpl.cpp  SteamAudioImpl.hpp  SteamAudioImpl_global.hpp  bufferpool.cpp  bufferpool.hpp  environment.cpp  environment.hpp  fixedsettings.hpp  phonontools.cpp  phonontools.hpp  playback.cpp  playback.hpp  playback_environment.cpp  simulation.cpp  simulation.hpp  simulation_environment.cpp  simulation_environment.hpp  utils.cpp  utils.hpp
UltimatePhobia/: CMakeLists.txt  anycall.hpp  application.cpp  application.hpp  configure_persistentdatapath.cpp  configure_persistentdatapath.hpp  crash_handler.cpp  crash_handler.hpp  deobfuscations.cpp  deobfuscations.hpp  detours_helpers.hpp  disable_antimod.cpp  disable_antimod.hpp  disable_splashscreen.cpp  disable_splashscreen.hpp  dll_ffi.cpp  dll_ffi.hpp  elf_ffi.cpp  elf_ffi.hpp  ffi.hpp  ffi_interface.cpp  ffi_interface.hpp  ffi_loader.cpp  ffi_loader.hpp  game_enums.hpp  game_hook.cpp  game_hook.hpp  game_types.cpp  game_types.hpp  gamedata.cpp  gamedata.hpp  generate_anycall.py  generate_data.py  generation_filter.json  getbaseaddr.cpp  getbaseaddr.hpp  global_state.cpp  global_state.hpp  il2cpp.cpp  il2cpp.hpp  (+29 more)
UltimatePhobia/bindings/: phasmophobia.cpp  phasmophobia.hpp  unityengine.cpp  unityengine.hpp
UltimatePhobia/ffi/: ffi_interface.hpp  il2cpp.hpp
UltimatePhobia/mods/: base.hpp  cheats.cpp  cheats.hpp  explorer.cpp  explorer.hpp  fixes.cpp  fixes.hpp  global_instance_manager.cpp  global_instance_manager.hpp  goldberg_emu_manager.cpp  goldberg_emu_manager.hpp  hacks.cpp  hacks.hpp  improvements.cpp  improvements.hpp  photon_settings.cpp  photon_settings.hpp  player_manager.cpp  player_manager.hpp  save_file_manager.cpp  save_file_manager.hpp  tracer.cpp  tracer.hpp
UltimatePhobia/wasm/: il2cpp.cpp  wasm_interface.hpp
WASMAOT/: .gitignore  CMakeLists.txt  Module.c  Module.h  WASMAOT_global.hpp  compile.py  wasmaot.cpp  wasmaot.cpp-template  wasmaot.hpp
WASMExamples/AssemblyScript/: package-lock.json  package.json
WASMExamples/AssemblyScript/assembly/: index.ts  wasm_interface.ts
WASMExamples/Cpp/: CMakeLists.txt  main.cpp  user_impl.cpp
WASMTest/: CMakeLists.txt  main.cpp  user_impl.cpp
il2cpp dump/: stringliteral.json
launcher/: CMakeLists.txt  main.cpp
