cmake_minimum_required(VERSION 3.16)

project(UltimatePhobiaLauncher LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(../deps/detours Detours)

add_executable(UltimatePhobiaLauncher main.cpp)
target_link_libraries(UltimatePhobiaLauncher PRIVATE Detours)
